<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tRoom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TextView
        android:id="@+id/tTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tTime" />



    <TextView
        android:id="@+id/tName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tName" />


    <TextView
        android:id="@+id/typeTimetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typeTimetable" />



    <TextView
        android:id="@+id/roomTimetable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roomTimetable" />

</LinearLayout>